<resources>
    <string name="app_name">Bassa</string>

    <string name="action_participants">Participants</string>
    <string name="action_sync">Synchronization</string>
    <string name="action_settings">Settings</string>
    <string name="editText_hint_title">Title</string>
    <string name="editText_hint_question">Question</string>
    <string name="button_add_question">add this question</string>
    <string name="headline_questions">Questions</string>
    <string name="headline_answers">Answers</string>
    <string name="headline_participants">Participants</string>
    <string name="headline_active_participants">Available Participants</string>
    <string name="headline_deleted_questions">Deleted Questions</string>
    <string name="headline_deleted_participants">Deleted Participants</string>
    <string name="headline_updated_participants">Updated Participants</string>

    // Error Messages
    <string name="editText_errorMessage">Field should not be empty.</string>
    <string name="activate_wifi">Please activate Wifi.</string>
    <string name="select_participants">Please select at least one participant.</string>

    //ContextMenu
    <string name="cab_delete">Delete description</string>
    <string name="cab_change">Change description</string>
    <string name="cab_checked_string">selected</string>

    // Dialog
    <string name="dialog_edit_question_title">Change Question</string>
    <string name="dialog_add_questions_title">Add Question</string>
    <string name="dialog_edit_profile">Edit Profile</string>
    <string name="dialog_select_participant">Select Participant</string>
    <string name="dialog_title_title">Title:</string>
    <string name="dialog_title_question">Question:</string>
    <string name="dialog_button_positive">Done</string>
    <string name="dialog_button_negative">Cancel</string>
    <string name="dialog_name">Name:</string>

    //Button
    <string name="button_set_peers_and_sync">set participants and synchronize</string>


</resources>
