<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/action_participants"
        android:icon="@drawable/ic_person_white_48dp"
        android:title="@string/action_participants"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_cached_white_48dp"
        android:title="@string/action_sync"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_applications_white_48dp"
        android:title="@string/action_settings"
        app:showAsAction="always"/>

</menu>